frontend: fix action buttons too close in qt app
Unfortunatelly gap support in flexbox was added after chrome 84.

https://caniuse.com/flexbox-gap

--- a/frontends/web/src/routes/account/account.module.css
+++ b/frontends/web/src/routes/account/account.module.css
@@ -22,7 +22,6 @@
 
 .actionsContainer {
     display: flex;
-    gap: var(--space-quarter);
     transform: translateY(-36%);
     margin-top: var(--space-quarter);
 }
@@ -38,6 +37,7 @@
     font-size: var(--size-default);
     height: calc(var(--item-height) / 1.5);
     line-height: calc(var(--item-height) / 1.5);
+    margin-left: var(--space-quarter);
     padding: 0 var(--space-half);
     text-align: center;
     text-decoration: none;
